# scriptdev2

./: .gitattributes  .gitignore  AUTHORS.md  Auto create Make File.lnk  CMakeLists.txt  ExtendedScript.txt  How to install.txt  Makefile  Makefile.am  Makefile.in  README  ScriptDev2.conf  ScriptMgr.cpp  ScriptMgr.h  ToDo.txt  config.h  config.h.in  scriptVC100.sln  scriptVC110.sln  scriptVC120.sln  scriptVC71.sln  scriptVC80.sln  scriptVC90.sln  scriptdev2.conf  scriptdev2.conf.dist.in  scripts.sql  sd2_revision_nr.h  sd2_revision_sql.h  svn_revision.js  system.cpp
VC100/: 100ScriptDev2.vcxproj  100ScriptDev2.vcxproj.filters
VC110/: 110ScriptDev2.vcxproj  110ScriptDev2.vcxproj.filters
VC120/: 120ScriptDev2.vcxproj  120ScriptDev2.vcxproj.filters
VC71/: 71ScriptDev2.vcproj  gensvnrevision.vcproj
VC80/: 80ScriptDev2.vcproj  gensvnrevision.vcproj
VC90/: 90ScriptDev2.vcproj  gensvnrevision.vcproj
base/: escort_ai.cpp  escort_ai.h  follower_ai.cpp  follower_ai.h  guard_ai.cpp  guard_ai.h  guards.cpp  pet_ai.cpp  pet_ai.h  simple_ai.cpp  simple_ai.h
docs/: ChangeLog.html  ChangeLog.txt  EventAI.txt  How to install.txt  How_to_install.html  How_to_install.txt  Script Layout.txt  Text-tables.txt  ToDo.html  ToDo.txt  aaa_Overview.html  aaa_Overview.txt
icc_project/: README
icc_project/documentation/: day-1.txt  day-4.txt  day-7.txt  day-8.txt  day-9.txt  day_1.html  day_1.txt  day_2.txt  day_3.txt
icc_project/research/: research_boss_festergut.txt
include/: precompiled.cpp  precompiled.h  sc_creature.cpp  sc_creature.h  sc_gossip.h  sc_grid_searchers.cpp  sc_grid_searchers.h  sc_instance.cpp  sc_instance.h
patches/: ExtendedScript.patch  MaNGOS-10790-ScriptDev2.patch  MaNGOS-10938-ScriptDev2.patch  MaNGOS-11167-ScriptDev2.patch  MaNGOS-2008-10-23-ScriptDev2.patch  MaNGOS-2008-10-28-ScriptDev2.patch  MaNGOS-2008-12-22-ScriptDev2.patch  MaNGOS-4798-ScriptDev2.patch  MaNGOS-7356-ScriptDev2.patch  MaNGOS-7812-ScriptDev2.diff  MaNGOS-7842-ScriptDev2.patch  MaNGOS-8095-ScriptDev2.patch  MaNGOS-8273-ScriptDev2.patch  MaNGOS-8735-ScriptDev2.patch  MaNGOS-8759-ScriptDev2.patch  MaNGOS-9439-ScriptDev2.patch  MaNGOS-9483-ScriptDev2.patch  MaNGOS-9519-ScriptDev2.patch  MaNGOS-r3333-ScriptDev2.patch  MaNGOS-r3460-ScriptDev2.patch  MaNGOS-r4054-ScriptDev2.patch  MaNGOS-r4106-ScriptDev2.patch  MaNGOS-r4203-ScriptDev2.patch  MaNGOS-r5049-Scriptdev2.patch  MaNGOS-r6707-Scriptdev2.patch  MaNGOS-r6765-ScriptDev2.patch  configure.ac.patch
patches/custom/: ScriptDev2_1131_to_MaNGOS_0.12.patch  ScriptDev2_1149_to_MaNGOS_0.12.patch  ScriptDev2_1180_to_MaNGOS_0.12.patch  ScriptDev2_1318_to_MaNGOS_0.12.patch  ScriptDev2_1663_to_MaNGOS_0.12.patch  ScriptDev2_1682_to_MaNGOS_0.12.patch  ScriptDev2_1835_to_MaNGOS_0.12.patch  ScriptDev2_1895_to_MaNGOS_0.12.patch  ScriptDev2_1910_to_MaNGOS_0.12.patch  ScriptDev2_1982_to_MaNGOS_0.12.patch  ScriptDev2_2005_to_MaNGOS_one.patch  ScriptDev2_2007_to_MaNGOS_one.patch  ScriptDev2_2224_to_MaNGOS_one.patch  ScriptDev2_2295_to_MaNGOS_one.patch
scripts/: Script Layout.txt  sc_default.cpp  sc_defines.cpp  sc_defines.h
scripts/boss/: boss_lethon.cpp  (+17 more)
sql/: Makefile.am  create_database.sql  create_tables.sql  mangos_full_scripts.sql  mangos_scriptname_clear.sql  mangos_scriptname_full.sql  scriptdev2.sql  scriptdev2_create_database.sql  scriptdev2_create_structure.sql  scriptdev2_create_structure_mysql.sql  scriptdev2_create_structure_pgsql.sql  scriptdev2_script_full.sql  scriptdev2_script_texts.sql  scriptdev2_script_waypoint.sql  scriptdev2_structure.sql  scriptdev_additional_req.sql  scriptdev_full.sql  scripts.sql
sql/Updates/: 27_Vaelastraz.sql  Makefile.am  r1002_scriptdev2.sql  r1006_scriptdev2.sql  r1010_mangos.sql  r1010_scriptdev2.sql  r1012_mangos.sql  r1016_scriptdev2.sql  r1023_scriptdev2.sql  r1025_mangos.sql  r1030_scriptdev2.sql  r1032_scriptdev2.sql  r1039_mangos.sql  r1056_scriptdev2.sql  r1067_mangos.sql  r1068_mangos.sql  r1068_scriptdev2.sql  r1073_mangos.sql  r1098_scriptdev2.sql  r1100_mangos.sql  r1106_mangos.sql  r1116_mangos.sql  r1129_mangos.sql  r1131_mangos.sql  r1136_mangos.sql  r1141_mangos.sql  r1146_scriptdev2.sql  r1152_scriptdev2.sql  r1155_mangos.sql  r1169_mangos.sql  r1171_scriptdev2.sql  r1184_mangos.sql  r1196_mangos.sql  r1199_mangos.sql  r1202_mangos.sql  r1207_scriptdev2.sql  r1212_mangos.sql  r1215_mangos.sql  r123.sql  r124.sql  (+305 more)
sql/Updates/0.0.1/: Makefile.am
sql/Updates/0.0.2/: Makefile.am  r152.sql  r227_scriptdev2.sql  r634_scriptdev2.sql  r656_scriptdev2.sql  r681_scriptdev2.sql  r702_scriptdev2_script_texts.sql  r705_scriptdev2_script_texts.sql  r709_scriptdev2_script_texts.sql  r715_scriptdev2_script_texts.sql  r725_scriptdev2_script_texts.sql  r726_scriptdev2_script_texts.sql  r728_scriptdev2_script_texts.sql  r740_scriptdev2_script_texts.sql  r743_scriptdev2_script_texts.sql  r802_mangos.sql  r809_mangos.sql  r809_scriptdev2_script_texts.sql  r81.sql  r810_mangos.sql
sql/Updates/0.0.3/: Makefile.am  r1008_mangos.sql  r1009_scriptdev2.sql  r1014_mangos.sql  r1058_scriptdev2.sql  r1075_mangos.sql  r1080_scriptdev2.sql  r1082_mangos.sql  r1104_scriptdev2.sql  r1112_mangos.sql  r1120_scriptdev2.sql  r1129_scriptdev2.sql  r1136_scriptdev2.sql  r1145_scriptdev2.sql  r1149_scriptdev2.sql  r1154_mangos.sql  r1180_mangos.sql  r1207_mangos.sql  r1210_mangos.sql  r1215_scriptdev2.sql  r1218_scriptdev2.sql  r1221_mangos.sql  r1222_scriptdev2.sql  r1243_mangos.sql  r1257_scriptdev2.sql  r1258_scriptdev2.sql  r1280_scriptdev2.sql  r1317_mangos.sql  r1317_scriptdev2.sql  r1321_scriptdev2.sql  r1351_scriptdev2.sql  r1352_scriptdev2.sql  r1367_mangos.sql  r1368_mangos.sql  r1380_mangos.sql  r1385_mangos.sql  r1388_scriptdev2.sql  r1394_mangos.sql  r1394_scriptdev2.sql  r1405_mangos.sql  (+32 more)
sql/Updates/0.0.4/: Makefile.am  r1460_mangos.sql  r1461_mangos.sql  r1481_scriptdev2.sql  r1496_mangos.sql  r1504_scriptdev2.sql  r1508_mangos.sql  r1516_scriptdev2.sql  r1517_scriptdev2.sql  r1523_mangos.sql  r1538_mangos.sql  r1540_scriptdev2.sql
system/: MangosdRev.cpp  ScriptLoader.cpp  ScriptLoader.h  system.cpp  system.h
(+2376 files in other folders)
